riverlea - Fix low contrast issues on contact dashboard

--- a/ext/riverlea/streams/hackneybrook/css/_variables.css
+++ b/ext/riverlea/streams/hackneybrook/css/_variables.css
@@ -67,7 +67,7 @@ color-scheme: light dark; /* check to use simpler syntax late-2024 (Edge+iOS Saf
 --crm-c-background2: var(--crm-c-gray-050);
 --crm-c-background3: var(--crm-c-gray-100);
 --crm-c-background4: var(--crm-c-gray-200);
---crm-c-background5: var(--crm-c-gray-500);
+--crm-c-background5: var(--crm-c-gray-700);
 --crm-c-drag-background: var(--crm-c-background3);
 --crm-c-code-background: var(--crm-c-background3);
 --crm-c-primary: var(--crm-c-gray-025);
@@ -227,7 +227,7 @@ color-scheme: light dark; /* check to use simpler syntax late-2024 (Edge+iOS Saf
 --crm-alert-text-warning: var(--crm-c-text);
 --crm-alert-background-info: var(--crm-c-blue-light);
 --crm-alert-border-info: var(--crm-c-blue);
---crm-alert-text-info: var(--crm-c-blue-dark);
+--crm-alert-text-info: var(--crm-c-blue-darker);
 --crm-alert-background-danger: var(--crm-c-red-light);
 --crm-alert-border-danger: var(--crm-c-red);
 --crm-alert-text-danger: var(--crm-c-red-dark);
